# Voxify

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/: Voxify.h
src/Voxify/: voxifypch.cpp  voxifypch.h
src/Voxify/Core/: Application.cpp  Application.h  EntryPoint.cpp  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
src/Voxify/Event/: ApplicationEvent.h  Event.h  InputEvent.h
